<resources>
    <string name="app_name">FitApp</string>
    <string name="label_day_of_week">День недели:</string>
    <string name="hint_title">Название тренировки:</string>
    <string name="hint_description">Описание тренировки:</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="button_save_note">ДОБАВИТЬ ТРЕНЕРОВКУ</string>
    <string name="warning_fill_fileds">Все поля должны быть заполнены</string>
    <string name="mon2"> Понедельник</string>
    <string name="tue">Вторник </string>
    <string name="wed"> Среда</string>
    <string name="thu"> Четверг</string>
    <string name="fri"> Пятница</string>
    <string name="sat"> Суббота</string>
    <string name="sun"> Воскресенье</string>
    <string name="button_add_exercise">Добавить новое</string>
    <string name="textview_chose_exercise">Выберете упражнение</string>
    <string name="button_add_set">Добавить подход</string>
    <string name="textView_weight">Вес</string>
    <string name="textView_reps">Повторений</string>
    <string name="textView_Set">Номер подхода</string>
    <string name="button_add_exercise_activity">Добавить упражнение</string>
    <string name="textview_hint_title_of_ex">Название упражнения</string>
    <string name="editText_hint_title_of_ex">введите название упражнения</string>
    <string name="textview_description_of_ex">Описание</string>
    <string name="edittext_description_of_ex">введите описание упражнения</string>
    <string name="textview_description_of_ex_set">Дополнительное описание</string>
    <string name="textviewFAQ">КУЛЬТУРИЗМ (он же бодибилдинг, он же телостроительство) - это процесс наращивания
мыши с помощью силовых тренировок. Как спорт, этот вид деятельности оценивать очень
сложно, потому что такой критерий как "развитая мускулатура" очень субъективный. Одному судье
нравится один атлет, другому другой и сказать кто объективно лучше - невозможно. В этом плане
бодибилдинг принципиально отличается от любых других соревнований. Говоря откровенно,
бодибилдинг - это не соревнование, а конкурс красоты, потому что оценивают внешние данные,
а не процесс самой борьбы.
МЫШЦЫ - это органы тела человека, предназначенные для выполнения различных действий
под влиянием нервного импульса. Так как эта книга о бодибилдинге, то мы будем рассматривать
только СКЕЛЕТНЫЕ МЫШЦЫ. Т.е. те, которые предназначены для перемещения одних
костей скелета относительно других. Для примера: вы сгибаете руку в локте - работает мышца
бицепса, перемещая лучевую кость (предплечье) относительно плечевой кости.
СИЛОВЫЕ ТРЕНИРОВКИ - это основной способ развития (увеличения) скелетных мышц
человека. Дело в том, что мышцы растут в своем размере только когда выполняют силовую работу.
Силовой тренинг может быть очень разным и не всегда предполагает работу с отягощениями.
Например, многие силовики работаю в статическом режиме. Это тоже хорошо развивает силу. Но
когда мы говорим о бодибилдинге, для нас важен не любой силовой тренинг, а преимущественно
только силовой ТРЕНИНГ С ОТЯГОЩЕНИЯМИ (штангами, гантелями) потому что во время такого
тренинга происходит перемещение костей скелета друг относительно друга под нагрузкой.
КОМПЛЕКСЫ ТРЕНИРОВОК (программы тренировок) - это алгоритм организации нагрузки
на скелетные мышцы как во время самой тренировочной сессии, так и по дням недели. Иначе
говоря, тренировочный комплекс - это ваш "маршрут" по которому вы катаетесь на каждой
тренировке. УПРАЖНЕНИЯ - это способы развития каких то конкретных мышц или
мышечных групп.
Например, жим штанги лежа - это упражнение для развития грудных мышц. А подьем штанги на
бицепс - упражнение, как вы понимаете, для развития бицепса. Упражнения могут быть более
сложными и более легкими, в зависимости от количества мышц вовлекаемых во время своего
выполнения. Традиционно для новичков лучше всего подходят тяжелые (базовые) упражнения,
потому что они заставляют расти мышцы даже тогда, когда человек еще плохо чувствует мышечные
сокращения.
ПОВТОРЕНИЯ - это то, сколько раз вы выполняете развивающее движение без остановки на
отдых. К примеру, вы берете штангу на бицепс и делает сгибание, затем еще одно без отдыха, и еще
одно.... Силы закончились (вы не можете сделать движение еще раз). Это вы сделали три повторения.
Иначе говоря, 1 повторение - это разовое выполнение движения в упражнении (от нижней
точки, к верхний и обратно к нижней). В бодибилдинге стараются подобрать такой вес в
упражнении (60-75% от разового максимума) чтоб это позволило выполнить 6-12 повторений без
отдыха. Именно такое количество повторений способствует оптимальной трате энергии для роста
мышечной массы.
ПОДХОД - это серия повторяющихся движений без остановки на отдых. Допустим, вы делаете
наши любимые сгибания на бицепс. Вот вы подняли штангу, опустили.... и так, без отдыха, сделали
10-ть раз, пока силы вас окончательно не покинули, вынудив остановиться на минуту для отдыха.
Что вы сделали? Вы сделали один подход из 10 повторений. После минутного отдыха вы берете
штангу в руку и делаете следующую серию. Это вы делаете второй подход. В бодибилдинге чаще
всего используют 2-4 рабочих подхода на мышцу в каждом упражнении.
"ОТКАЗ" - это неспособность мышцы сократится сделав еще одно повторение в верной
технике. Отказ говорит о том. что у вас осталось слишком мало энергии для того чтоб сделать еще
одно повторение. Отказы могут быть разных степеней. О них мы будем весьма подробно говорить
чуть позже. Пока запомните: отказ - это показатель критической траты энергии в мышце.
ПРОГРЕССИВНЫЙ ТРЕНИНГ - это тренировки в которых регулярно происходит увеличение
нагрузки. Прогрессия нагрузки - это краеугольный постулат любого скоростно силового вида
спорта. Если нагрузка на ваши мышцы не изменяется, то им соответственно, тоже, незачем
меняться.
От тренировке к тренировке нужно давать мышцам более сложную нагрузку, разрушая их. Вслед за
подобными разрушениями начинается процесс "залечивания" который называется восстановление.
Прогрессию нагрузки можно осуществлять большим количеством способов, однако самый простой
из них - это постепенное увеличение рабочих весов на штанге.
ВОССТАНОВЛЕНИЕ - это процесс "залечивания" поврежденных тренировкой мыши к
исходному (целостному) состоянию. Восстановление требует двух вещей: времени и питательных
веществ. После достижения "исходного уровня" процесс "лечения" мышц не останавливается.
Происходит дополнительный рост "про запас" на всякий случай. Вот этот "про запас" и есть рост
ваших мышц. Он происходит в результате суперкомпенсации.
СУПЕРКОМПЕНСАЦИЯ - это превышение исходного уровня в процессе восстановления.
Сначала мышцы восстанавливают свой размер до исходного уровня, и только после этого делают
дополнительную компенсацию (суперкомпенсацию) "про запас". Тело делает это на тот случай, если
тренировочный стресс повториться в будущем. Так оно адаптируется к регулярным тренировочным
нагрузкам.
    ПОСТОЯНСТВО.
Одна из основных причин неудач среди занимающихся в тренажерном зале - это отсутствие
постоянства в тренировках. Большинству людей свойственно тренироваться эпизодически.
Человек может заниматься несколько месяцев подряд, а потом на месяц уехать в командировку и
полностью прекратить тренировки с отягощениями. Либо, другой, частый вариант: человек весь год
ведет праздный образ жизни переполненный излишествами и только перед наступлением летнего
"пляжного сезона" берется за голову по причине того, что ему стыдно раздеться и показать всем
вокруг куски сала свисающие с его тела. В обоих случаях, как вы догадываетесь, не может быть и
речи о каких то серьезных изменениях в телосложении.
Нашему телу не выгодно изменяться, потому что это заставляет его тратить больше энергии.
Тело идет на такие изменения только в условиях очень жесточайшей необходимости - ему
приходится адаптироваться к ПОСТОЯННОМУ тренировочному стрессу. Нет постоянного стресса,
значит нет постоянной адаптации (нет роста мышц).
В результате разрушений мышц на тренировке включаются процессы регенерации (восстановления +
маленькое "супер-восстановление" сверху). Однако подобная адаптация временная, без
повторного стресса она сойдет на нет и тело вернется к "исходной точке". Именно поэтому
такая адаптация называется краткосрочной. Для того, чтоб мышцы выросли нужно
ПОСТОЯННО складывать краткосрочные адаптации в кучу, которая будет называться
долгосрочной адаптацией. В нашем случае это выразится в росте мышц и силы.
Поэтому, первое, на что должен настроится человек желающий добиться успехов в своем
телосложении - это на ПОСТОЯННЫЕ (регулярные) тренировки с отягощениями, вне
зависимости от времени года и вне зависимости от остальных желаний. Тот, кто пропускает
тренировки, только путает тело, не давая ему расти.
ПРОГРЕССИЯ.
Второй важнейший "секрет" больших достижений - это прогрессия нагрузок в тренажерном зале.
Это основной принцип любого скоростно-силового вида спорта. Тяжелая атлетика, легкая атлетика,
метание молота, прыжки в длину....везде успех зависит от развития мышц, поэтому тренировочный
процесс строится так, чтоб нагрузка увеличивалась от тренировки к тренировке. Это же логично,
черт побери! Если не меняется внешняя нагрузка, то незачем меняться и мышцам (становиться
сильнее, быстрее и больше). Тело очень "экономное". Оно никогда не увеличит мышцы без крайнее
необходимости, потому что это будет расходовать больше энергии и поэтому не выгодно.
Вспомните про адаптацию. Тело адаптируется к тренировочному стрессу увеличивая размер мышц.
А что будет если тренировочный стресс будет неизменным? Мышцы к нему быстро адаптируются и
на этом процесс остановится, чтоб не тратить энергии больше чем нужно. Какой выход? Сделать
стресс на следующей тренировке чуть сильнее для того, чтоб снова включилась адаптация и
мышцы стали еще чуть больше и сильнее. В этом суть силовых тренировок. Нагрузка должна
прогрессироваться. И проще всего это сделать путем увеличения веса на штанге. Представьте
бицепс который может поднять 20 кг и бицепс, который может поднять 80 кг. Как вы думаете, какой
из них будет выглядеть более внушительно? Думайте не о размере бицепса, а о том, как научить его
преодолевать более тяжелые нагрузки. Тогда он сам вырастет.
ПОСЛЕДОВАТЕЛЬНОСТЬ.
Нельзя построить небоскреб на фундаменте от общественного туалета. Для того, чтоб построить
большое здание, нужно последовательно увеличить все то, от чего зависит его устойчивость и
работа. Нужно укрепить и углубить фундамент, нужно проложить новые, более разветвленные
коммуникации и построить новую котельную для обеспечения его водой. Нужно
ПОСЛЕДОВАТЕЛЬНО все подготовить для такого грандиозного мероприятия.
То же самое и с человеческим телом. Большие мышцы - это потребность в большем объеме
крови, питательных веществ, сердце, работе эндокринной системы. Это более прочные кости и
связки. Это более развитая энергетическая система. И много чего еще. На высоком уровне
достижение именно отсутствие последовательности развития всех систем организма тормозит
дальнейший рост мышц. Для развития разных систем нужны разные тренировки. Большинство
даже опытных культуристов не понимает важности разных тренировок для развития нужных систем.
Они предпочитают тренировать только мышцы и не понимают, почему они не растут. Почему при
подъеме на 4-й этаж у них сердце уже выпрыгивает из груди? А почему болят связки и преследуют
травмы после тяжелых тренировок? А причина очень простая: прочность цепи определяется
самыми слабыми звеньями. Если вы их не "закаляли", то именно они и рвутся.
Тот кто осознает это, способен на достижения самого высокого уровня.

        Отблагодарить автора можно по этому биткоин кошельку
</string>
    <string name="edtAddresBit">1BhaeAKRRWyaKxeYT6qKMZjwUQ6X3Nkcnx</string>
    <string name="copy_address">Скопировать адресс в буфер</string>
</resources>