<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_faq">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="3dp"
                android:padding="0dp"
                android:text="@string/textviewFAQ"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/edtAddresBit" />

            <Button
                android:id="@+id/buttonCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCopy"
                android:text="@string/copy_address" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>